--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div class="header">
-        <h1>Web Word</h1>
+        <a href="index.html" id="logo">Web Word</a>
         <nav>
             <ul>
-                <li><a href="#">Login</a></li>
+                <li><a href="login.html">Login</a></li>
                 <li><a href="#">Save</a></li>
                 <li><a href="#">Download</a></li>
                 <li><a href="#">About</a></li>
